--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.4.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>rasilewicz.car_workshop_manager</groupId>
+    <groupId>pl.rasilewicz.car_workshop_manager</groupId>
     <artifactId>car_workshop_manager</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>car_workshop_manager</name>
